test/corpus/additional_coverage.txt
===
Single-quoted attribute with double quotes inside mustache section
===
<button data-bs-content='<math-field id="popover-{{uuid}}" {{#allow_trig}}allow-trig="allow-trig"{{/allow_trig}} class="read-only">{{answer}}</math-field>'>click</button>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name)
      (html_attribute
        (html_attribute_name)
        (html_quoted_attribute_value
          (html_attribute_value)
          (mustache_interpolation
            (mustache_identifier))
          (html_attribute_value)
          (mustache_section
            (mustache_section_begin
              (mustache_tag_name))
            (_mustache_section_content
              (text))
            (mustache_section_end
              (mustache_tag_name)))
          (html_attribute_value)
          (mustache_interpolation
            (mustache_identifier))
          (html_attribute_value))))
    (text)
    (html_end_tag
      (html_tag_name))))

===
Empty mustache section
===
{{#empty}}{{/empty}}
---

(document
  (mustache_section
    (mustache_section_begin
      (mustache_tag_name))
    (mustache_section_end
      (mustache_tag_name))))

===
Empty inverted section
===
{{^empty}}{{/empty}}
---

(document
  (mustache_inverted_section
    (mustache_inverted_section_begin
      (mustache_tag_name))
    (mustache_inverted_section_end
      (mustache_tag_name))))

===
Dot expression (current context)
===
<li>{{.}}</li>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name))
    (mustache_interpolation)
    (html_end_tag
      (html_tag_name))))

===
Path expression with multiple levels
===
{{user.profile.name.first}}
---

(document
  (mustache_interpolation
    (mustache_path_expression
      (mustache_identifier)
      (mustache_identifier)
      (mustache_identifier)
      (mustache_identifier))))

===
Numeric identifier
===
{{123}}
---

(document
  (mustache_interpolation
    (mustache_identifier)))

===
Underscore in identifier
===
{{my_variable_name}}
---

(document
  (mustache_interpolation
    (mustache_identifier)))

===
Partial template
===
{{> header }}
---

(document
  (mustache_partial
    (mustache_partial_content)))

===
Partial template in element
===
<div>{{> user_card }}</div>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name))
    (mustache_partial
      (mustache_partial_content))
    (html_end_tag
      (html_tag_name))))

===
Single-quoted attribute with mustache
===
<div class='{{className}}'>content</div>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name)
      (html_attribute
        (html_attribute_name)
        (html_quoted_attribute_value
          (mustache_interpolation
            (mustache_identifier)))))
    (text)
    (html_end_tag
      (html_tag_name))))

===
Single-quoted attribute with text and mustache
===
<div class='prefix-{{name}}-suffix'>content</div>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name)
      (html_attribute
        (html_attribute_name)
        (html_quoted_attribute_value
          (html_attribute_value)
          (mustache_interpolation
            (mustache_identifier))
          (html_attribute_value))))
    (text)
    (html_end_tag
      (html_tag_name))))

===
Void element br with surrounding mustache
===
{{#condition}}<br>{{/condition}}
---

(document
  (mustache_section
    (mustache_section_begin
      (mustache_tag_name))
    (html_element
      (html_start_tag
        (html_tag_name)))
    (mustache_section_end
      (mustache_tag_name))))

===
HR void element with mustache conditional
===
{{#showDivider}}<hr class="{{hrClass}}">{{/showDivider}}
---

(document
  (mustache_section
    (mustache_section_begin
      (mustache_tag_name))
    (html_element
      (html_start_tag
        (html_tag_name)
        (html_attribute
          (html_attribute_name)
          (html_quoted_attribute_value
            (mustache_interpolation
              (mustache_identifier))))))
    (mustache_section_end
      (mustache_tag_name))))

===
Multiple consecutive interpolations
===
{{first}}{{second}}{{third}}
---

(document
  (mustache_interpolation
    (mustache_identifier))
  (mustache_interpolation
    (mustache_identifier))
  (mustache_interpolation
    (mustache_identifier)))

===
Section followed by inverted section (else pattern)
===
{{#items}}
<li>{{name}}</li>
{{/items}}
{{^items}}
<p>No items</p>
{{/items}}
---

(document
  (mustache_section
    (mustache_section_begin
      (mustache_tag_name))
    (html_element
      (html_start_tag
        (html_tag_name))
      (mustache_interpolation
        (mustache_identifier))
      (html_end_tag
        (html_tag_name)))
    (mustache_section_end
      (mustache_tag_name)))
  (mustache_inverted_section
    (mustache_inverted_section_begin
      (mustache_tag_name))
    (html_element
      (html_start_tag
        (html_tag_name))
      (text)
      (html_end_tag
        (html_tag_name)))
    (mustache_inverted_section_end
      (mustache_tag_name))))

===
Deeply nested sections (5 levels)
===
{{#a}}{{#b}}{{#c}}{{#d}}{{#e}}deep{{/e}}{{/d}}{{/c}}{{/b}}{{/a}}
---

(document
  (mustache_section
    (mustache_section_begin
      (mustache_tag_name))
    (mustache_section
      (mustache_section_begin
        (mustache_tag_name))
      (mustache_section
        (mustache_section_begin
          (mustache_tag_name))
        (mustache_section
          (mustache_section_begin
            (mustache_tag_name))
          (mustache_section
            (mustache_section_begin
              (mustache_tag_name))
            (text)
            (mustache_section_end
              (mustache_tag_name)))
          (mustache_section_end
            (mustache_tag_name)))
        (mustache_section_end
          (mustache_tag_name)))
      (mustache_section_end
        (mustache_tag_name)))
    (mustache_section_end
      (mustache_tag_name))))

===
Comment with special characters
===
{{! This is a comment with <html> and "quotes" }}
---

(document
  (mustache_comment
    (mustache_comment_content)))

===
Triple mustache with path expression
===
{{{user.bio.html}}}
---

(document
  (mustache_triple
    (mustache_path_expression
      (mustache_identifier)
      (mustache_identifier)
      (mustache_identifier))))

===
Data attribute with mustache
===
<div data-id="{{id}}" data-config="{{config}}">content</div>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name)
      (html_attribute
        (html_attribute_name)
        (html_quoted_attribute_value
          (mustache_interpolation
            (mustache_identifier))))
      (html_attribute
        (html_attribute_name)
        (html_quoted_attribute_value
          (mustache_interpolation
            (mustache_identifier)))))
    (text)
    (html_end_tag
      (html_tag_name))))

===
Inverted section wrapping attribute
===
<button {{^disabled}}type="submit"{{/disabled}}>Submit</button>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name)
      (mustache_attribute
        (mustache_inverted_section
          (mustache_inverted_section_begin
            (mustache_tag_name))
          (html_attribute
            (html_attribute_name)
            (html_quoted_attribute_value
              (html_attribute_value)))
          (mustache_inverted_section_end
            (mustache_tag_name)))))
    (text)
    (html_end_tag
      (html_tag_name))))

===
Entity mixed with mustache
===
<p>&copy; {{year}} &mdash; {{company}}</p>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name))
    (html_entity)
    (mustache_interpolation
      (mustache_identifier))
    (html_entity)
    (mustache_interpolation
      (mustache_identifier))
    (html_end_tag
      (html_tag_name))))

===
Self-closing tag with mustache section around attribute
===
<img src="{{src}}" {{#hasAlt}}alt="{{alt}}"{{/hasAlt}} />
---

(document
  (html_element
    (html_self_closing_tag
      (html_tag_name)
      (html_attribute
        (html_attribute_name)
        (html_quoted_attribute_value
          (mustache_interpolation
            (mustache_identifier))))
      (mustache_attribute
        (mustache_section
          (mustache_section_begin
            (mustache_tag_name))
          (html_attribute
            (html_attribute_name)
            (html_quoted_attribute_value
              (mustache_interpolation
                (mustache_identifier))))
          (mustache_section_end
            (mustache_tag_name)))))))

===
Multiple mustache types in one element
===
<div>
{{! comment }}
{{variable}}
{{{raw}}}
{{> partial }}
{{#section}}content{{/section}}
{{^inverted}}fallback{{/inverted}}
</div>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name))
    (mustache_comment
      (mustache_comment_content))
    (mustache_interpolation
      (mustache_identifier))
    (mustache_triple
      (mustache_identifier))
    (mustache_partial
      (mustache_partial_content))
    (mustache_section
      (mustache_section_begin
        (mustache_tag_name))
      (text)
      (mustache_section_end
        (mustache_tag_name)))
    (mustache_inverted_section
      (mustache_inverted_section_begin
        (mustache_tag_name))
      (text)
      (mustache_inverted_section_end
        (mustache_tag_name)))
    (html_end_tag
      (html_tag_name))))

===
Mustache inside HTML comment
===
<!-- {{variable}} -->
<div>content</div>
---

(document
  (html_comment)
  (html_element
    (html_start_tag
      (html_tag_name))
    (text)
    (html_end_tag
      (html_tag_name))))

===
Doctype followed by mustache
===
<!DOCTYPE html>
{{#showHeader}}<header>{{title}}</header>{{/showHeader}}
---

(document
  (html_doctype)
  (mustache_section
    (mustache_section_begin
      (mustache_tag_name))
    (html_element
      (html_start_tag
        (html_tag_name))
      (mustache_interpolation
        (mustache_identifier))
      (html_end_tag
        (html_tag_name)))
    (mustache_section_end
      (mustache_tag_name))))

===
Multiple attributes some with mustache sections
===
<div id="main" {{#class}}class="{{class}}"{{/class}} {{#style}}style="{{style}}"{{/style}}>content</div>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name)
      (html_attribute
        (html_attribute_name)
        (html_quoted_attribute_value
          (html_attribute_value)))
      (mustache_attribute
        (mustache_section
          (mustache_section_begin
            (mustache_tag_name))
          (html_attribute
            (html_attribute_name)
            (html_quoted_attribute_value
              (mustache_interpolation
                (mustache_identifier))))
          (mustache_section_end
            (mustache_tag_name))))
      (mustache_attribute
        (mustache_section
          (mustache_section_begin
            (mustache_tag_name))
          (html_attribute
            (html_attribute_name)
            (html_quoted_attribute_value
              (mustache_interpolation
                (mustache_identifier))))
          (mustache_section_end
            (mustache_tag_name)))))
    (text)
    (html_end_tag
      (html_tag_name))))

===
Mustache in textarea
===
<textarea>{{content}}</textarea>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name))
    (mustache_interpolation
      (mustache_identifier))
    (html_end_tag
      (html_tag_name))))

===
Mustache in title element
===
<title>{{pageTitle}} - {{siteName}}</title>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name))
    (mustache_interpolation
      (mustache_identifier))
    (text)
    (mustache_interpolation
      (mustache_identifier))
    (html_end_tag
      (html_tag_name))))

===
Standalone mustache section without HTML
===
{{#show}}visible{{/show}}
---

(document
  (mustache_section
    (mustache_section_begin
      (mustache_tag_name))
    (text)
    (mustache_section_end
      (mustache_tag_name))))

===
Whitespace only in section
===
{{#spacer}}   {{/spacer}}
---

(document
  (mustache_section
    (mustache_section_begin
      (mustache_tag_name))
    (mustache_section_end
      (mustache_tag_name))))

===
Section containing only interpolation
===
{{#wrapper}}{{value}}{{/wrapper}}
---

(document
  (mustache_section
    (mustache_section_begin
      (mustache_tag_name))
    (mustache_interpolation
      (mustache_identifier))
    (mustache_section_end
      (mustache_tag_name))))

===
Multiple sections at same level
===
{{#first}}1{{/first}}{{#second}}2{{/second}}{{#third}}3{{/third}}
---

(document
  (mustache_section
    (mustache_section_begin
      (mustache_tag_name))
    (text)
    (mustache_section_end
      (mustache_tag_name)))
  (mustache_section
    (mustache_section_begin
      (mustache_tag_name))
    (text)
    (mustache_section_end
      (mustache_tag_name)))
  (mustache_section
    (mustache_section_begin
      (mustache_tag_name))
    (text)
    (mustache_section_end
      (mustache_tag_name))))

===
Section in attribute value with text before and after
===
<div class="base {{#active}}active{{/active}} end">content</div>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name)
      (html_attribute
        (html_attribute_name)
        (html_quoted_attribute_value
          (html_attribute_value)
          (mustache_section
            (mustache_section_begin
              (mustache_tag_name))
            (text)
            (mustache_section_end
              (mustache_tag_name)))
          (html_attribute_value))))
    (text)
    (html_end_tag
      (html_tag_name))))

===
Input void element with mustache attributes
===
<input type="{{type}}" name="{{name}}" value="{{value}}">
---

(document
  (html_element
    (html_start_tag
      (html_tag_name)
      (html_attribute
        (html_attribute_name)
        (html_quoted_attribute_value
          (mustache_interpolation
            (mustache_identifier))))
      (html_attribute
        (html_attribute_name)
        (html_quoted_attribute_value
          (mustache_interpolation
            (mustache_identifier))))
      (html_attribute
        (html_attribute_name)
        (html_quoted_attribute_value
          (mustache_interpolation
            (mustache_identifier)))))))

===
Input with conditional boolean attribute
===
<input type="checkbox" {{#checked}}checked{{/checked}}>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name)
      (html_attribute
        (html_attribute_name)
        (html_quoted_attribute_value
          (html_attribute_value)))
      (mustache_attribute
        (mustache_section
          (mustache_section_begin
            (mustache_tag_name))
          (html_attribute
            (html_attribute_name))
          (mustache_section_end
            (mustache_tag_name)))))))

===
Input with conditional disabled attribute (inverted)
===
<input type="text" {{^editable}}disabled{{/editable}}>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name)
      (html_attribute
        (html_attribute_name)
        (html_quoted_attribute_value
          (html_attribute_value)))
      (mustache_attribute
        (mustache_inverted_section
          (mustache_inverted_section_begin
            (mustache_tag_name))
          (html_attribute
            (html_attribute_name))
          (mustache_inverted_section_end
            (mustache_tag_name)))))))

===
Select with options using mustache
===
<select name="{{name}}">
  {{#options}}
  <option value="{{value}}">{{label}}</option>
  {{/options}}
</select>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name)
      (html_attribute
        (html_attribute_name)
        (html_quoted_attribute_value
          (mustache_interpolation
            (mustache_identifier)))))
    (mustache_section
      (mustache_section_begin
        (mustache_tag_name))
      (html_element
        (html_start_tag
          (html_tag_name)
          (html_attribute
            (html_attribute_name)
            (html_quoted_attribute_value
              (mustache_interpolation
                (mustache_identifier)))))
        (mustache_interpolation
          (mustache_identifier))
        (html_end_tag
          (html_tag_name)))
      (mustache_section_end
        (mustache_tag_name)))
    (html_end_tag
      (html_tag_name))))

===
Optgroup with mustache
===
<select>
  {{#groups}}
  <optgroup label="{{label}}">
    {{#options}}
    <option value="{{value}}">{{text}}</option>
    {{/options}}
  </optgroup>
  {{/groups}}
</select>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name))
    (mustache_section
      (mustache_section_begin
        (mustache_tag_name))
      (html_element
        (html_start_tag
          (html_tag_name)
          (html_attribute
            (html_attribute_name)
            (html_quoted_attribute_value
              (mustache_interpolation
                (mustache_identifier)))))
        (mustache_section
          (mustache_section_begin
            (mustache_tag_name))
          (html_element
            (html_start_tag
              (html_tag_name)
              (html_attribute
                (html_attribute_name)
                (html_quoted_attribute_value
                  (mustache_interpolation
                    (mustache_identifier)))))
            (mustache_interpolation
              (mustache_identifier))
            (html_end_tag
              (html_tag_name)))
          (mustache_section_end
            (mustache_tag_name)))
        (html_end_tag
          (html_tag_name)))
      (mustache_section_end
        (mustache_tag_name)))
    (html_end_tag
      (html_tag_name))))

===
Table with mustache in rows
===
<table>
  {{#rows}}
  <tr>
    <td>{{cell1}}</td>
    <td>{{cell2}}</td>
  </tr>
  {{/rows}}
</table>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name))
    (mustache_section
      (mustache_section_begin
        (mustache_tag_name))
      (html_element
        (html_start_tag
          (html_tag_name))
        (html_element
          (html_start_tag
            (html_tag_name))
          (mustache_interpolation
            (mustache_identifier))
          (html_end_tag
            (html_tag_name)))
        (html_element
          (html_start_tag
            (html_tag_name))
          (mustache_interpolation
            (mustache_identifier))
          (html_end_tag
            (html_tag_name)))
        (html_end_tag
          (html_tag_name)))
      (mustache_section_end
        (mustache_tag_name)))
    (html_end_tag
      (html_tag_name))))

===
Table with implicit tr and td closures and mustache
===
<table>
  {{#rows}}
  <tr>
    <td>{{cell1}}
    <td>{{cell2}}
  {{/rows}}
</table>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name))
    (mustache_section
      (mustache_section_begin
        (mustache_tag_name))
      (html_element
        (html_start_tag
          (html_tag_name))
        (html_element
          (html_start_tag
            (html_tag_name))
          (mustache_interpolation
            (mustache_identifier)))
        (html_element
          (html_start_tag
            (html_tag_name))
          (mustache_interpolation
            (mustache_identifier))
          (html_forced_end_tag))
        (html_forced_end_tag))
      (mustache_section_end
        (mustache_tag_name)))
    (html_end_tag
      (html_tag_name))))

===
Pre element with mustache preserving content
===
<pre>{{code}}</pre>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name))
    (mustache_interpolation
      (mustache_identifier))
    (html_end_tag
      (html_tag_name))))

===
Link void element in head with mustache
===
<head>
  <link rel="stylesheet" href="{{cssUrl}}">
</head>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name))
    (html_element
      (html_start_tag
        (html_tag_name)
        (html_attribute
          (html_attribute_name)
          (html_quoted_attribute_value
            (html_attribute_value)))
        (html_attribute
          (html_attribute_name)
          (html_quoted_attribute_value
            (mustache_interpolation
              (mustache_identifier))))))
    (html_end_tag
      (html_tag_name))))

===
Meta void element with mustache
===
<meta name="description" content="{{description}}">
---

(document
  (html_element
    (html_start_tag
      (html_tag_name)
      (html_attribute
        (html_attribute_name)
        (html_quoted_attribute_value
          (html_attribute_value)))
      (html_attribute
        (html_attribute_name)
        (html_quoted_attribute_value
          (mustache_interpolation
            (mustache_identifier)))))))

===
Hyphenated identifier in mustache
===
{{my-variable-name}}
---

(document
  (mustache_interpolation
    (mustache_identifier)))

===
Hyphenated identifier in section
===
{{#my-section}}content{{/my-section}}
---

(document
  (mustache_section
    (mustache_section_begin
      (mustache_tag_name))
    (text)
    (mustache_section_end
      (mustache_tag_name))))

===
Path expression with hyphens
===
{{my-object.my-property}}
---

(document
  (mustache_interpolation
    (mustache_path_expression
      (mustache_identifier)
      (mustache_identifier))))

===
Partial with path-like content
===
{{> partials/header }}
---

(document
  (mustache_partial
    (mustache_partial_content)))

===
Multiple interpolations in attribute without separator
===
<div id="{{prefix}}{{suffix}}">content</div>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name)
      (html_attribute
        (html_attribute_name)
        (html_quoted_attribute_value
          (mustache_interpolation
            (mustache_identifier))
          (mustache_interpolation
            (mustache_identifier)))))
    (text)
    (html_end_tag
      (html_tag_name))))

===
Mustache section wrapping multiple sibling elements
===
{{#show}}
<span>first</span>
<span>second</span>
<span>third</span>
{{/show}}
---

(document
  (mustache_section
    (mustache_section_begin
      (mustache_tag_name))
    (html_element
      (html_start_tag
        (html_tag_name))
      (text)
      (html_end_tag
        (html_tag_name)))
    (html_element
      (html_start_tag
        (html_tag_name))
      (text)
      (html_end_tag
        (html_tag_name)))
    (html_element
      (html_start_tag
        (html_tag_name))
      (text)
      (html_end_tag
        (html_tag_name)))
    (mustache_section_end
      (mustache_tag_name))))

===
Mustache immediately after closing tag
===
<div>content</div>{{variable}}
---

(document
  (html_element
    (html_start_tag
      (html_tag_name))
    (text)
    (html_end_tag
      (html_tag_name)))
  (mustache_interpolation
    (mustache_identifier)))

===
Mustache immediately before opening tag
===
{{variable}}<div>content</div>
---

(document
  (mustache_interpolation
    (mustache_identifier))
  (html_element
    (html_start_tag
      (html_tag_name))
    (text)
    (html_end_tag
      (html_tag_name))))

===
Adjacent section and inverted section same name
===
{{#items}}<li>{{name}}</li>{{/items}}{{^items}}<p>none</p>{{/items}}
---

(document
  (mustache_section
    (mustache_section_begin
      (mustache_tag_name))
    (html_element
      (html_start_tag
        (html_tag_name))
      (mustache_interpolation
        (mustache_identifier))
      (html_end_tag
        (html_tag_name)))
    (mustache_section_end
      (mustache_tag_name)))
  (mustache_inverted_section
    (mustache_inverted_section_begin
      (mustache_tag_name))
    (html_element
      (html_start_tag
        (html_tag_name))
      (text)
      (html_end_tag
        (html_tag_name)))
    (mustache_inverted_section_end
      (mustache_tag_name))))

===
Nested inverted sections
===
{{^a}}{{^b}}content{{/b}}{{/a}}
---

(document
  (mustache_inverted_section
    (mustache_inverted_section_begin
      (mustache_tag_name))
    (mustache_inverted_section
      (mustache_inverted_section_begin
        (mustache_tag_name))
      (text)
      (mustache_inverted_section_end
        (mustache_tag_name)))
    (mustache_inverted_section_end
      (mustache_tag_name))))

===
Mixed section types nested
===
{{#outer}}{{^inner}}fallback{{/inner}}{{/outer}}
---

(document
  (mustache_section
    (mustache_section_begin
      (mustache_tag_name))
    (mustache_inverted_section
      (mustache_inverted_section_begin
        (mustache_tag_name))
      (text)
      (mustache_inverted_section_end
        (mustache_tag_name)))
    (mustache_section_end
      (mustache_tag_name))))

===
Uppercase HTML tags with mustache
===
<DIV>{{content}}</DIV>
---

(document
  (html_element
    (html_start_tag
      (html_tag_name))
    (mustache_interpolation
      (mustache_identifier))
    (html_end_tag
      (html_tag_name))))

===
Mixed case identifier
===
{{MyVariable}}
---

(document
  (mustache_interpolation
    (mustache_identifier)))

===
Single character identifier
===
{{x}}
---

(document
  (mustache_interpolation
    (mustache_identifier)))

===
Attribute with only mustache section no text
===
<div class="{{#active}}active{{/active}}">content</div>
---
